<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hr.knezzz.randomsolarsystem.PlanetActivity"
    tools:showIn="@layout/activity_planet">

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_centerHorizontal="true"
            android:id="@+id/planet_model"
            android:transitionName="planetView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/planet_info"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/planet_info"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@id/planet_model"
            android:fontFamily="sans-serif-black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:baselineAligned="false"
            android:id="@+id/info_group_one"
            android:layout_below="@id/planet_info"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/planet_info_size"
                android:orientation="vertical"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:id="@+id/planet_info_size_text"
                    tools:text="15,000km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/planet_diameter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/planet_info_temperature"
                android:orientation="vertical"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:id="@+id/planet_info_temperature_text"
                    tools:text="8 °C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/planet_info_satellites"
            android:orientation="vertical"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/info_group_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:id="@+id/planet_info_satellites_text"
                tools:text="One"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="14sp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/natural_satellites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/planet_info_distance"
            android:orientation="vertical"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/planet_info_satellites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:id="@+id/planet_info_distance_text"
                tools:text="150,000,000 km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="14sp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/distance_from_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_below="@id/planet_info_distance"
            android:id="@+id/life_info"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/life_info"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:baselineAligned="false"
            android:id="@+id/life_first_filter"
            android:layout_below="@id/life_info"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/life_goldilocks"
                android:orientation="vertical"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="sans-serif-light"
                    android:textSize="18sp"
                    android:id="@+id/planet_info_goldilocks_text"
                    tools:text="TRUE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/goldilocks_zone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/life_water"
                android:orientation="vertical"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="sans-serif-light"
                    android:textSize="18sp"
                    android:id="@+id/planet_info_water_text"
                    tools:text="TRUE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/water"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:id="@+id/life_second_filter"
            android:layout_below="@id/life_first_filter"
            android:orientation="horizontal"
            android:weightSum="2"
            android:paddingBottom="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/life_simple"
                android:orientation="vertical"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="sans-serif-light"
                    android:textSize="18sp"
                    android:id="@+id/planet_info_life_text"
                    tools:text="TRUE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/simple_life"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/life_complex"
                android:orientation="vertical"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="sans-serif-light"
                    android:textSize="18sp"
                    android:id="@+id/planet_info_complexlife_text"
                    tools:text="TRUE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/complex_life"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <!--
                <TextView
                    android:layout_below="@id/life_second_filter"
                    android:id="@+id/steam_key"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:text="NO MAN'S SKY"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_below="@id/steam_key"
                    android:id="@+id/sorry"
                    android:orientation="vertical"
                    android:paddingBottom="80dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:fontFamily="sans-serif-light"
                        android:textSize="20sp"
                        android:text="Sorry, but your key is on another planet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="14sp"
                        android:fontFamily="sans-serif-thin"
                        android:text="Steam key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>-->
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
